# nlp_Assignment3

./: .gitignore  CLAUDE.md  README.md  build_dataset_db.py  prompting.py  pyproject.toml  t5_utils.py  utils.py
doc/: assignment_spec.md  data_report.md  eval_performance_optimization.md  t5-base-training-run.md  training-launch-issues.md
part1/: config.py  data.py  eval_checkpoint.py  model.py  train.py
part2/: config.py  data.py  eval_checkpoint.py  model.py  train.py
part3/: config.py  data.py  model.py  train.py
records/: t5_ft_dev.pkl  t5_ft_experiment_dev.pkl  t5_ft_experiment_test.pkl  t5_ft_t5_ft_dev.pkl  t5_ft_test.pkl
results/: t5_ft_dev.sql  t5_ft_experiment_dev.sql  t5_ft_experiment_test.sql  t5_ft_t5_ft_dev.sql  t5_ft_test.sql
script/: mlflow_ui.sh  monitor_training.sh  run_base_configs.sh
src/: config.py  infrastructure.py  mlflow_utils.py
src/utils/: system_metrics.py
