[project]
name = "assignment3-nl2sql"
version = "0.1.0"
requires-python = ">= 3.10"

dependencies = [
    "numpy>=1.26.0",
    "torch>=2.1.2",
    "tokenizers>=0.19.1",
    "transformers>=4.40.0",
    "accelerate>=0.29.3",
    "nltk>=3.8.1",
    "tqdm>=4.66.1",
    "wandb>=0.15.10",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.2",
    "bitsandbytes>=0.43.1",
    "sentencepiece>=0.2.0",
    "mlflow>=2.12.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "tensorboard",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
